# BirdFSD-YOLOv5

./: .deepsource.toml  .env.example  .gitignore  .readthedocs.yaml  BirdFSDV1_YOLOv5_LS_Predict.ipynb  BirdFSD_YOLOv5_colab_inference_LS_pipeline.ipynb  BirdFSD_YOLOv5_train.ipynb  Dockerfile  LICENSE  README.md  YOLOv5_colab_pipeline.ipynb  apply_predictions_YOLOv5.py  apply_predictions_with_ray.py  auto_prediction_schedule.py  build_docs.sh  class_names.npy  conditional_tasks_removal.py  conf.example.py  conf.py.example  generate_release.py  job.sh  json2yolov5.py  mongodb_helper.py  mongodb_helpers.py  predict.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sync_model.py  train_slurm.sh  update_today_view.py
birdfsd-yolov5/: auto_prediction_schedule.py  conf.py  json2yolov5.py  predict.py
docs/: auto_prediction_schedule.rst  birdfsd_yolov5.api.rst  birdfsd_yolov5.augmentation.rst  birdfsd_yolov5.datasets_manager.rst  birdfsd_yolov5.label_studio_helpers.rst  birdfsd_yolov5.model_utils.rst  birdfsd_yolov5.prediction.rst  birdfsd_yolov5.preprocessing.rst  birdfsd_yolov5.publishing.rst  birdfsd_yolov5.rst  conf.py  index.rst  json2yolov5.rst  modules.rst  predict.rst
environments/: environment_slurm.yml
model_utils/: best_weights.py  colab_logger.py  conditional_tasks_filter.py  construct_dataset.py  create_rare_labels_view.py  data_aug.py  download_weights.py  handlers.py  minio_helper.py  mongodb_helper.py  relative_to_abs.py  s3_helper.py  update_run_cfg.py  update_today_view.py  utils.py
notebooks/: BirdFSDV1_YOLOv5_LS_Predict.ipynb  (+2 more)
slurm/: train.sh  (+2 more)
(+101 files in other folders)
